Actions
Bug #12126
closedtruss: passing argument 1 to restrict-qualified parameter aliases with argument 4
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 8:
../print.c: In function 'prt_psflags': ../print.c:1632:19: error: passing argument 1 to restrict-qualified parameter aliases with argument 4 [-Werror=restrict] (void) snprintf(str, sizeof (str), "%s|%#x", str, val); ^~~ ~~~ cc1: all warnings being treated as errors
Testing done: build/install/boot
used command: truss -f psecflags -s current,-aslr,-noexecstack -e /bin/sh 24690: mmap(0x00010000, 65536, PROT_READ|PROT_WRITE|PROT_EXEC, MAP_PRIVATE|MAP_ANON|MAP_ALIGN, 4294967295, 0) = 0xFFFFFD7FEF160000 24690: psecflags(0xFFFFFD7FFFDF00E0, PSF_INHERIT, { 0x0, PROC_SEC_ASLR|PROC_SEC_NOEXECSTACK|0, 0x0, B_FALSE }) = 0 24690: execve("/bin/sh", 0xFFFFFD7FFFDF03C8, 0xFFFFFD7FFFDF03D8) argc = 1
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7f7cea96d5057c067c283bdd0a3bd608876b3d90
commit 7f7cea96d5057c067c283bdd0a3bd608876b3d90 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-29T15:31:08.000Z 12126 truss: passing argument 1 to restrict-qualified parameter aliases with argument 4 Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions