12126 truss: passing argument 1 to restrict-qualified parameter aliases with argument 4 Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>